update - header style menu

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <!-- navbar -->
         <nav class="container">
-            <div class="row justify-between">
+            <div class="row justify-between align-center">
                 <div class="col">
                     <img src="./img/logo.svg" alt="logo Discord">
                 </div>
-                <div class="col">
+                <div class="col page-menu bt-14">
                     <a href="#">Download</a>
                     <a href="#">Nitro</a>
                     <a href="#">Discover</a>
@@ -27,8 +27,8 @@
                     <a href="#">Blog</a>
                     <a href="#">Careers</a>
                 </div>
-                <div class="col">
-                    login
+                <div class="col white-button bt-12">
+                    Accedi
                 </div>
             </div>
         </nav>
