add - hero section text + button (html css)

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     <a href="#">Blog</a>
                     <a href="#">Careers</a>
                 </div>
-                <div class="col white-button bt-12">
-                    Accedi
-                </div>
+                <a href="#" class="col button bt-12">Accedi</a>
             </div>
         </nav>
     </header>
@@ -41,7 +39,14 @@
         <section class="hero-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-10"></div>
+                    <div class="col-10">
+                        <h1 class="ht-68">Il tuo posto per parlare</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi labore dolorum pariatur aliquam perspiciatis similique facilis sed asperiores, porro ducimus at deleniti rerum voluptates saepe repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="hero-buttons">
+                            <a href="#" class="button">&#129043; Scarica per Mac</a>
+                            <a href="#" class="button dgrey-bg">Apri Discord nel tuo browser</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
