--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-10">
-                        <h1 class="ht-68">Il tuo posto per parlare</h1>
+                        <h1 class="ht-48">Il tuo posto per parlare</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi labore dolorum pariatur aliquam perspiciatis similique facilis sed asperiores, porro ducimus at deleniti rerum voluptates saepe repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <div class="hero-buttons">
                             <a href="#" class="button">&#129043; Scarica per Mac</a>
@@ -55,8 +55,17 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-65"></div>
-                    <div class="col-35"></div>
+                    <div class="col-8">
+                        <img src="./img/item1.svg" alt="frog reading a book">
+                    </div>
+                    <div class="col-4">
+                        <h2 class="ht-34">
+                            Un luogo a invito con tutto lo spazio necessario per parlare
+                        </h2>
+                        <p>
+                            Quos saepe porro sapiente numquam, ea quibusdam perferendis labore nesciunt molestias, sunt unde incidunt atque corrupti inventore hic beatae, ipsam nostrum debitis.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -65,8 +74,17 @@
         <section class="lgrey-bg">
             <div class="container">
                 <div class="row reverse">
-                    <div class="col-65"></div>
-                    <div class="col-35"></div>
+                    <div class="col-8">
+                        <img src="./img/item2.svg" alt="rabbit and wizard">
+                    </div>
+                    <div class="col-4">
+                        <h2 class="ht-34">
+                            Dove trovarsi è facile
+                        </h2>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit, ea quibusdam perferendis labore nesciunt molestias.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,8 +93,17 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-65"></div>
-                    <div class="col-35"></div>
+                    <div class="col-8">
+                        <img src="./img/item3.svg" alt="book and genius image">
+                    </div>
+                    <div class="col-4">
+                        <h2 class="ht-34">
+                            Da pochi a un fandom
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolor iure ducimus, dolorem harum facilis consequatur cum doloribus enim quis molestias ratione vitae recusandae.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
