add - text + image section 4

--- a/index.html
+++ b/index.html
@@ -112,7 +112,15 @@
         <section class="lgrey-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-100"></div>
+                    <div class="col-100">
+                        <h2 class="ht-34">
+                            Tecnologia affidabile per tenersi in contatto
+                        </h2>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, inventore ea! Repudiandae consequatur officia omnis vitae consectetur temporibus explicabo eaque quia molestiae saepe quaerat nesciunt nisi cumque, voluptatem accusamus deserunt?
+                        </p>
+                        <img src="./img/item4-big.svg" alt="rabbit, genius and other weird perope">
+                    </div>
                 </div>
             </div>
         </section>
