--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-8">
                         <img src="./img/item3.svg" alt="book and genius image">
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 justify-center">
                         <h2 class="ht-34">
                             Da pochi a un fandom
                         </h2>
@@ -129,13 +129,11 @@
         <section class="dgrey-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-30"></div>
-                    <div class="col-70">
-                        <div class="row">
-                            <div class="col-25"></div>
-                            <div class="col-25"></div>
-                            <div class="col-25"></div>
-                            <div class="col-25"></div>
+                    <div class="col-4"></div>
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
                         </div>
                     </div>
                 </div>
